Fixed visual glitch in nav link animation - removed scale factor for tiny screen sizes, just do a standard Y Translation on small screens to avoid this visual glitch

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,16 @@
     opacity: 1;
 }
 
+@media screen and (max-width: 450px) {
+  .navLink:after {
+      transform: translateY(-150%);
+   }
+
+   .navLink:active:after, .navLink:hover:after {
+       transform: translateY(0);
+   }
+}
+
 /*
  * Navigation Bar Items List
  */
